crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_nested_dynamic_child_attrs_and_events.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { child as _child, setClass as _setClass, createInvoker as _createInvoker, delegateEvents as _delegateEvents, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div><button>x</button></div>", true)
_delegateEvents("click")
export function render(_ctx) {
const n0 = t0()
const n1 = _child(n0)
n1.$evtclick = _createInvoker(e => _ctx.onClick(e))
_renderEffect(() => _setClass(n1, _ctx.cls))
return n0
}
