crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_nested_slot_outlet_child.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { createSlot as _createSlot, insert as _insert, child as _child, template as _template } from 'vue';
const t0 = _template("<div><!----></div>", true)
export function render(_ctx) {
const n1 = t0()
const n2 = _child(n1)
const n0 = _createSlot("default", { row: () => (_ctx.item), index: () => (_ctx.i) })
_insert(n0, n1, n2)
return n1
}
