crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_nested_static_template_ref_uses_child_ref.snap
---
source: crates/vize_atelier_vapor/src/lib.rs
expression: code.as_str()
---
import { child as _child, createTemplateRefSetter as _createTemplateRefSetter, template as _template } from 'vue';
const t0 = _template("<div><span></span></div>", true)
export function render(_ctx) {
const _setRef = _ctx.vaporTemplateRefSetter || _createTemplateRefSetter()
const n1 = t0()
const n0 = _child(n1)
_setRef(n0, "inner")
return n1
}
