crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_nested_v_for_key_uses_outer_alias.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createFor as _createFor, template as _template } from 'vue';
const t0 = _template("<span> </span>")
const t1 = _template("<div></div>", true)
export function render(_ctx) {
const n0 = t1()
_setInsertionState(n0)
const n1 = _createFor(() => (4), (_for_item0) => {
const n3 = _createFor(() => (_ctx.icons), (_for_item1, _for_key1) => {
const n5 = t0()
const x5 = _txt(n5)
_renderEffect(() => {
_setClass(n5, _for_item1.value)
_setText(x5, _toDisplayString(_for_item1.value))
})
return n5
}, (icon, i) => (`${_for_item0.value}-${i}`))
return n3
}, (n) => (`set-${n}`), 4)
return n0
}
