crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_self_closing_svg_children_stay_siblings.snap
---
source: crates/vize_atelier_vapor/src/lib.rs
expression: code.as_str()
---
import { template as _template } from 'vue';
const t0 = _template("<svg><path d=\"a\"></path><path d=\"b\"></path></svg>", true, 1)
export function render(_ctx) {
const n0 = t0()
return n0
}
