crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_simple_element.snap
---
source: crates/vize_atelier_vapor/src/lib.rs
expression: code.as_str()
---
import { template as _template } from 'vue';
const t0 = _template("<div>hello</div>", true)
export function render(_ctx) {
const n0 = t0()
return n0
}
