crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_slot_outlet_preserves_dynamic_name.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { createSlot as _createSlot, template as _template } from 'vue';
const t0 = _template("fallback")
export function render(_ctx) {
const n0 = _createSlot(() => (_ctx.slotName), { item: () => (_ctx.x) }, () => {
const n1 = t0()
return n1
})
return n0
}
