crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_slot_outlet_preserves_static_name_props_and_fallback.snap
---
source: crates/vize_atelier_vapor/src/lib.rs
expression: code.as_str()
---
import { renderSlot as _renderSlot, template as _template } from 'vue';
const t0 = _template("<span>fallback</span>")
export function render(_ctx) {
const n0 = _renderSlot($slots, "header", { "item": _ctx.x }, () => {
const n1 = t0()
return n1
})
return n0
}
