crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_v_cloak_uses_builtin_lowering.snap
---
source: crates/vize_atelier_vapor/src/lib.rs
expression: code.as_str()
---
import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div> </div>", true)
export function render(_ctx) {
const n0 = t0()
const x0 = _txt(n0)
n0.removeAttribute("v-cloak")
_renderEffect(() => _setText(x0, _toDisplayString(_ctx.msg)))
return n0
}
